Closed Bug 812795 Opened 13 years ago Closed 12 years ago

Greenish aura around the text with the SVG filter applied

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla29

People

(Reporter: j.tosovsky, Assigned: roc)

References

Details

(Keywords: regression)

Attachments

(3 files)

Attached image page.svg
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:17.0) Gecko/17.0 Firefox/17.0 Build ID: 20121113065533 Steps to reproduce: I've applied simple 'relief' filter to the gold text, see the attached test case. Actual results: There is greenish aura around this text. Expected results: No aura is displayed. It seems to be a regression as it looked much better in previous versions.
Confirmed on Mac too. I suspect this is due to painting text with subpixel AA into the surface to be filtered. Maybe we should not use subpixel AA in filters, masks, etc.?
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows 7 → All
Hardware: x86_64 → All
Version: 17 Branch → Trunk
Is there any temporary work around for this?
Regression window(m-c) Good: http://hg.mozilla.org/mozilla-central/rev/688734575830 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:17.0) Gecko/17.0 Firefox/17.0 ID:20120802041638 Bad: http://hg.mozilla.org/mozilla-central/rev/074fb996dfd7 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:17.0) Gecko/17.0 Firefox/17.0 ID:20120802062038 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=688734575830&tochange=074fb996dfd7 Regression window(m-i) Good: http://hg.mozilla.org/integration/mozilla-inbound/rev/a799b5bff84c Mozilla/5.0 (Windows NT 6.1; WOW64; rv:17.0) Gecko/17.0 Firefox/17.0 ID:20120801155239 Bad: http://hg.mozilla.org/integration/mozilla-inbound/rev/b077c43a4306 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:17.0) Gecko/17.0 Firefox/17.0 ID:20120801163038 Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=a799b5bff84c&tochange=b077c43a4306 Triggered by; b077c43a4306 Jonathan Watt — Bug 776054 - Flip the prefs to enable the use of display lists for SVG painting and hit-testing. r=roc.
Blocks: 776054
Keywords: regression
(In reply to Cameron McCormack (:heycam) from comment #1) > Confirmed on Mac too. I suspect this is due to painting text with subpixel > AA into the surface to be filtered. Maybe we should not use subpixel AA in > filters, masks, etc.? I'm not sure about masking. That should be doable. Filters, however, should definitely disable subpixel AA.
I don't see the problem on Linux for some reason. Let me know if these builds fix the problem: https://tbpl.mozilla.org/?tree=Try&rev=58c0cb34ba6e
Attached patch fixSplinter Review
Assignee: nobody → roc
Attachment #8356968 - Flags: review?(matt.woodrow)
The patch doesn't seem to make any difference as far as I can tell. I can see the greenish aura with/without it just the same.
Attached patch part 2Splinter Review
All is not lost as I see where the patch is going and it just needs this too. If you apply this and your patch everything displays correctly.
Attachment #8357138 - Flags: review?(matt.woodrow)
Comment on attachment 8356968 [details] [diff] [review] fix Matt is away for another couple of weeks.
Attachment #8356968 - Flags: review?(matt.woodrow) → review+
Attachment #8357138 - Flags: review?(matt.woodrow) → review+
(In reply to Robert O'Callahan (:roc) (Mozilla Corporation) from comment #7) > I don't see the problem on Linux for some reason. (FWIW, I do see this bug on Linux (Ubuntu 13.10), with both Nightly and release.)
Attachment #8357138 - Flags: checkin+
Whiteboard: [leave open]
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Blocks: 916515
Keywords: verifyme
Verified as fixed with latest Aurora on Win 8 x86 and Ubuntu 13.10 x86.
Status: RESOLVED → VERIFIED
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: