Bug 812795 (Part 2) - Disable subpixel AA on SVG text when requested to. r=jwatt